# QPluginFramework

./: .gitignore  CMakeLists.txt  README.md
AppDemo/: AppDemo_zh_CN.ts  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Interface/: Interface.cmake
Interface/PluginsCore/: IPlugin.h  IPluginsPackage.h  PluginsCore.cmake
Interface/PluginsDemo/: IPluginDemo.h  PluginsDemo.cmake
Interface/PluginsManager/: IPluginsManager.h  PluginsManager.cmake
Interface/Ui/: RibbonBar.h  RibbonCategory.h  RibbonPanel.h  SubWindowList.h  Ui.cmake  Ui_global.h
Interface/UiPluginsDemo/: UiPluginDemoIds.h  UiPluginsDemo.cmake
PluginsManager/: CMakeLists.txt  PluginsManager.cpp  PluginsManager.h
PluginsPackageDemo/: CMakeLists.txt  PluginDemo.cpp  PluginDemo.h  PluginsPackageDemo.cpp  PluginsPackageDemo.h  PluginsPackageDemo_zh_CN.ts
Ui/: CMakeLists.txt  RibbonBar.cpp  RibbonCategory.cpp  RibbonPanel.cpp  SubWindowList.cpp  Ui_zh_CN.ts
UiPluginsPackageDemo/: CMakeLists.txt  CommandPlugin.cpp  CommandPlugin.h  DockPlugin.cpp  DockPlugin.h  ToolPlugin.cpp  ToolPlugin.h  UiPluginsPackageDemo.cpp  UiPluginsPackageDemo.h  UiPluginsPackageDemo_zh_CN.ts  WindowPlugin.cpp  WindowPlugin.h
UiPluginsPackageDemo/Resource/: Resource.qrc
